# numpy_vs_cpp

./: .gitignore  README.md  decoder.py  generate_test.py  structs_.py
cpp_/: CMakeLists.txt  log_duration.h  main.cpp
pylib-test/: build.py  pyproject.toml  setup.py
pylib-test/pylib_ext/src/: pylib.cpp
python_/: decoder.py  generate_test.py
