[tool.poetry]
name = "pylib-test"
version = "0.1.0"
description = ""
authors = ["Rustam Akhmadullin"]

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "^2.8.0"
setuptools = "^69.1.0"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
